--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="it" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
-
+    <div class="line1">
+        <div class="ogg">
+          <span class="red">15%</span>
+          <img src="img/pd1.jpg" alt="">
+          <span class="like" > <img src="img/like.png" alt=""> </span>
+        </div>
+        <div class="ogg">
+          <span class="green">35%</span>
+          <img src="img/pd2.jpg" alt="">
+        </div>
+        <div class="ogg">
+          <span class="red">15%</span>
+          <img src="img/pd3.jpg" alt="">
+      </div>
+      <div class="line2">
+          <div class="ogg">
+            <span class="red">15%</span>
+            <img src="img/pd1.jpg" alt="">
+          </div>
+          <div class="ogg">
+            <span class="green">55%</span>
+            <img src="img/pd2.jpg" alt="">
+          </div>
+          <div class="ogg">
+            <span class="red">15%</span>
+            <img src="img/pd3.jpg" alt="">
+        </div>
+    </div>
   </body>
 </html>
