modifica  funzionante ma non aggraziata meno hover

--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
     <div class="line1">
         <div class="ogg">
           <span class="red">15%</span>
-          <img src="img/pd1.jpg" alt="">
-          <span class="like" > <img src="img/like.png" alt=""> </span>
+          <img class="prod" src="img/pd1.jpg" alt="">
+          <img class="like" src="img/like.png" alt="">
         </div>
         <div class="ogg">
           <span class="green">35%</span>
-          <img src="img/pd2.jpg" alt="">
+          <img  class="prod"  src="img/pd2.jpg" alt="">
+          <img class="like" src="img/like.png" alt="">
+
         </div>
         <div class="ogg">
           <span class="red">15%</span>
-          <img src="img/pd3.jpg" alt="">
+          <img class="prod"  src="img/pd3.jpg" alt="">
+          <img class="like" src="img/like.png" alt="">
+
       </div>
       <div class="line2">
           <div class="ogg">
             <span class="red">15%</span>
-            <img src="img/pd1.jpg" alt="">
+            <img class="prod"  src="img/pd1.jpg" alt="">
+            <img class="like" src="img/like.png" alt="">
           </div>
           <div class="ogg">
             <span class="green">55%</span>
-            <img src="img/pd2.jpg" alt="">
+            <img class="prod"  src="img/pd2.jpg" alt="">
+            <img class="like" src="img/like.png" alt="">
           </div>
           <div class="ogg">
             <span class="red">15%</span>
-            <img src="img/pd3.jpg" alt="">
+            <img class="prod"  src="img/pd3.jpg" alt="">
+            <img class="like" src="img/like.png" alt="">
         </div>
     </div>
   </body>
